fix skills wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3017,6 +3017,9 @@
 		display: -ms-flex;
 		display: flex;
 		flex-wrap: wrap;
+		-webkit-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		-moz-flex-wrap: wrap;
 		width: 100%;
 		margin: 0 0 3em 0;
 		padding: 0;
@@ -3033,7 +3036,8 @@
 			padding: 0.25em;
 			color: #ffffff;
 			text-align: center;
-			/*text-shadow: 0 0 10px rgba(0,0,0,0.6);*/
+			flex-basis: 14%;
+
 		}
 
 		.statistics li span {
@@ -3049,6 +3053,8 @@
 		.redux svg {
 			width: 80px;
 			height: 80px;
+			align-self: center;
+
 		}
 		.redux p {
 			font-size: 1.5rem;
